# translation-service

./: Dockerfile  Dockerfile.streamlit  TRANSLATION_FLOW_README.md  app.py  docker-compose.yml  main.py  pyproject.toml  test_translation_fix.py
.streamlit/: config.toml
agents/: cultural_advisor.py  final_translator_agent.py  quality_assessor.py  reviewer_agent.py  translator_agent.py
api/: __init__.py  models.py
api/routes/: health.py  quality.py  translation.py
config/: agent_config.py
core/: __init__.py  config.py  translation_service.py
quality/: iso_standards.py  mqm_framework.py
utils/: dutch_linguistics.py  swedish_linguistics.py
utils/GLOSSARY/: dutch.py
